# devys

./: .env.example  .eslintrc.json  .gitignore  .periphery-package-metalascii.yml  .periphery-package.yml  .periphery.yml  .prettierignore  .swiftlint.yml  AGENTS.md  Package.swift  README.md  claude-code-ide.db-shm  claude-code-ide.db-wal  package.json  test-chat-final.js  test-chat-simple.js  test-claude-code-direct.js  test-claude-code.js  test-provider-debug.mjs  test-provider-direct.mjs  test-tools.js  tsconfig.json
.docs/: AGENTS.md  README.md  agent-adapters.md  agent-plan.md  ai-sdk-v5-reference.md  architecture-overview.md  claude-code-sdk-reference.md  code-edit-breakdown.md  design-system.md  diagrams.md  docs.md  features.md  improve-workflow-plan.md  json.md  m1.md  m5-terminal-port.md  overview.md  phase-1-plan.md  phase-1.md  phase-2-new.md  phase-2-updates.md  phase-2.md  phase-3.md  phase-4.md  plan.md  prd.md  project-status.md  shiki-integration.md  sprint-10-plan.md  sprint-11-plan.md  sprint-7-plan.md  sprint-8-plan.md  sprint-9-plan.md  sprint-9.5-plan.md  swift-canvas-exploration.md  syntax-highlighting.md  syntax-improve-plan.md  tickets.md  tracker-1.md  tracker-2.md  (+3 more)
Config/: Devys.entitlements  Shared.xcconfig  Tests.xcconfig
Devys/: ContentView.swift  Devys.xctestplan  DevysApp.swift
Devys.xcodeproj/: project.pbxproj
Devys.xcworkspace/: contents.xcworkspacedata
DevysPackage/: Package.swift
DevysUITests/: DevysUITests.swift
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: create-icons.sh  generate-icons.js  icon-template.html
apps/desktop/src-tauri/src/: lib.rs  main.rs
control-plane/: Dockerfile  README.md  docker-compose.yml  package.json
devys/: ContentView.swift  Info.plist  devysApp.swift
devys.xcodeproj/: project.pbxproj
pty-sidecar/: Cargo.toml  package-lock.json  test_pty.js  test_ws.js
pty-sidecar/src/: main.rs  main_complex.rs
scripts/: audit.sh  bootstrap-ghostty.sh  bootstrap-zig.sh  build-ghostty-vt.sh  build-ghostty.sh  build-mac-client.sh  check-design-system.sh  check-tree-sitter-migration.sh  download-artwork.sh  generate-shiki-fixtures.mjs  lint.sh  quality-gate.sh  reset_fixture_workspace.sh  run_macos_bundle.sh  terminal-benchmark-report.mjs  tooling.sh  unused.sh  update-shiki-resources.mjs
terminal-ui/: Cargo.toml  README.md
terminal-ui/config/helix/: config.toml  languages.toml
terminal-ui/config/shell/: devys-init.bash  devys-init.zsh
terminal-ui/config/zellij/: devys-layout.kdl
terminal-ui/lsp/: Cargo.toml
terminal-ui/lsp/src/: main.rs
terminal-ui/plugins/: Cargo.toml
terminal-ui/plugins/ai-command/: Cargo.toml
terminal-ui/plugins/ai-command/src/: lib.rs
terminal-ui/plugins/context-viz/: Cargo.toml
terminal-ui/plugins/context-viz/src/: lib.rs
terminal-ui/plugins/grunt-status/: Cargo.toml
terminal-ui/plugins/grunt-status/src/: lib.rs
terminal-ui/scripts/: install.sh
terminal-ui/src/: claude_integration.rs  main.rs  pty_bridge.rs  terminal_ui.rs
terminal-ui/tui/: Cargo.toml
terminal-ui/tui/src/: main.rs
(+614 files in other folders)
