[package]
name = "devys-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devys-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"